kubernetes-nginx/petclinc-nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: petclinic-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false" 
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: api-gateway
          servicePort: 8080
      - path: /actuator/health
        backend:
          serviceName: api-gateway
          servicePort: 8081
      - path: /api/customer/
        backend:
          serviceName: customers-service
          servicePort: 8080
      - path: /api/vet/
        backend:
          serviceName: vets-service
          servicePort: 8080
      - path: /api/visit/
        backend:
          serviceName: visits-service
          servicePort: 8080
